--- a/client/angular.json
+++ b/client/angular.json
@@ -23,8 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/mytheme.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
